[package]
name = "comtrade"
version = "0.2.1"
authors = ["Drew Silcock <drew.silcock@stfc.ac.uk>"]
edition = "2021"
license = "MIT"
description = "A pure Rust parser for the COMTRADE (Common format for Transient Data Exchange for power systems) file format."
homepage = "https://github.com/drewsilcock/comtrade"
repository = "https://github.com/drewsilcock/comtrade"
keywords = ["power", "voltage", "disturbance", "comtrade", "oscillography"]
categories = ["parser-implementations", "science"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.10.2"
regex = "1.5.4"
lazy_static = "1.4.0"
chrono = "0.4.19"
